# doc-builder

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  README_strip_html.md  pyproject.toml  setup.cfg  setup.py  strip_to_docstrings.py
.github/workflows/: accelerate_doc.yml  build_embeddings.yml  build_main_documentation.yml  build_pr_documentation.yml  bump-huggingface-js-packages.yml  delete_doc_comment.yml  delete_doc_comment_trigger.yml  delete_old_pr_documentations.yml  delete_pr_documentation.yml  lint-svelte-kit.yml  populate_search_engine.yml  quality.yml  test.yml  upload_pr_documentation.yml
docs/: runnable-code-blocks.md
dummy/: _toctree.yml  index.md
kit/: .gitignore  README.md  eslint.config.js  mdsvex.config.js  package-lock.json  package.json  postbuild.sh  postcss.config.cjs  postprocess.js  preprocess.js  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
kit/preprocessors/: docstring.js  frameworkcontent.js  hashInCode.js  hfOptions.js  index.js  inferenceSnippet.js  tokenizersLang.js  utils.js
kit/preprocessors/mdsvex/: index.js
kit/src/: app.css  app.d.ts  app.html  hooks.js
kit/src/lib/: Added.svelte  Changed.svelte  CodeBlock.svelte  CodeBlockFw.svelte  ColabDropdown.svelte  CopyButton.svelte  CopyLLMTxtMenu.svelte  CourseFloatingBanner.svelte  Deprecated.svelte  DocNotebookDropdown.svelte  Docstring.svelte  Dropdown.svelte  DropdownEntry.svelte  DropdownMenu.svelte  EditOnGithub.svelte  ExampleCodeBlock.svelte  FrameworkContent.svelte  FrameworkContentBlock.svelte  Heading.svelte  (+48 more)
kit/svelteKitCustomClient/: README.md  client.js  replace.js
migrations/: clear_meili_index.py  create_embeddings_dataset.py  create_meili_index.py  export_meili_ids_to_hf.py  init_embeddings_tracker.py  migrate_tips.py  swap_meili_indexes.py
scripts/: .prettierrc  delete-old-prs.ts
src/: build.py  test_with_transformers.py
src/doc_builder/: __init__.py  archive_utils.py  autodoc.py  build_cache.py  build_doc.py  build_embeddings.py  check_links.py  convert_md_to_mdx.py  convert_rst_to_mdx.py  convert_to_notebook.py  embeddings_tracker.py  external.py  frontmatter_node.py  meilisearch_helper.py  mock_imports.py  process_hf_docs.py  pytest_plugin.py  style_doc.py  testing.py  utils.py
src/doc_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hf_doc_utils/: convert_rst_to_mdx.py  convert_to_notebook.py
src/hf_doc_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: strip_html_from_md.py
tests/: test_archive_utils.py  test_autodoc.py  test_build_cache.py  test_build_doc.py  test_convert_doc_file.py  test_convert_md_to_mdx.py  test_convert_rst_to_mdx.py  test_convert_to_notebook.py  test_doc_integration.py  test_mermaid_simple.py  test_mock_imports.py  test_style_doc.py  test_utils.py
tests/data/: convert_include_dummy.txt  convert_literalinclude_dummy.py  convert_literalinclude_dummy.txt
(+108 files in other folders)
